# challenge_deserializer

./: Cargo.toml  README.md
challenge_encoding_derive/: Cargo.toml
challenge_encoding_derive/src/: lib.rs  symbol.rs  test.rs
challenge_encoding_macro/: Cargo.toml  Makefile
challenge_encoding_macro/src/: lib.rs  test.rs
