[package]
name = "challenge_encoding_macro"
version = "0.0.1"
authors = ["Gabriel Fürstenheim <furstenheim@gmail.com>"]
edition = "2021"
rust-version = "1.59"
license = "MIT"
description = "Support for Programming challenges in Rust"
repository = "https://github.com/furstenheim"
documentation = ""
readme = "README.md"
keywords = ["deserializer", "competitive", "programming"]

[dependencies]
challenge_encoding_derive = {  version = "^0", path = "../challenge_encoding_derive" }
[dev-dependencies]
anyhow = "1.0"
indoc = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]